--- a/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary.csproj
+++ b/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary.csproj
@@ -1,7 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Protobuf Include=" * */*.proto" OutputDir="%(RelativePath)" CompileOutputs="false" GrpcServices="Both" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.15.6" />
+    <PackageReference Include="Grpc.Core" Version="2.36.4" />
+    <PackageReference Include="Grpc.Tools" Version="2.36.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <Protobuf Include="**/*.proto" OutputDir="%(RelativePath)" CompileOutputs="false" GrpcServices="Server" />
+  </ItemGroup>
 
 </Project>
