gRPCを双方向に変更 受信時にイベントを発生させるよう修正

--- a/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary.csproj
+++ b/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary/DestinationboardCommunicationLibrary.csproj
@@ -15,7 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <Protobuf Include="**/*.proto" OutputDir="%(RelativePath)" CompileOutputs="false" GrpcServices="Server" />
+    <Protobuf Include="**/*.proto" OutputDir="%(RelativePath)" CompileOutputs="false" GrpcServices="Both" />
   </ItemGroup>
 
 </Project>
